2022-10-06T01:16:43Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193821992
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 23 100 / 24 112
* notice: next accum: outdated-unq outdated-all / unq all: 24 112 / 25 113
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-07-29] / [2022-10-05]

2022-07-30T00:42:54Z:
* notice: last 14d: unq all: 1 12
* notice: prev accum: outdated-unq outdated-all / unq all: 22 89 / 23 100
* notice: next accum: outdated-unq outdated-all / unq all: 23 100 / 24 112
* notice: prev exec diff / last date diff / accum: unq all: +1 +12 -0 -0 / +1 +12 -0 -0 / 1 12
* notice: removed / changed dates: [2022-05-28] / [2022-07-29]

2022-06-11T00:43:37Z:
* notice: last 14d: unq all: 1 11
* notice: prev accum: outdated-unq outdated-all / unq all: 21 88 / 23 100
* notice: next accum: outdated-unq outdated-all / unq all: 22 89 / 23 100
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-05-27] / []

2022-06-07T08:15:28Z:
* notice: last 14d: unq all: 2 12
* notice: prev accum: outdated-unq outdated-all / unq all: 20 86 / 23 100
* notice: next accum: outdated-unq outdated-all / unq all: 21 88 / 23 100
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-05-24] / []

2022-05-28T16:13:14Z:
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 20 86 / 22 89
* notice: next accum: outdated-unq outdated-all / unq all: 20 86 / 23 100
* notice: prev exec diff / last date diff / accum: unq all: +1 +11 -0 -0 / +1 +11 -0 -0 / 1 11
* notice: changed dates: [2022-05-28]

2022-05-28T00:45:03Z:
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 20 86 / 21 88