@@ -3,7 +3,7 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2023-01-13T00:00:00Z",
+      "timestamp": "2023-07-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
